# notepadqq

src/: CMakeLists.txt  go_to.ui  mainwindow.cpp
src/cmake/modules/: FindQScintilla.cmake
